# Unique-Code-Generator

./: CMakeLists.txt  README.md
include/: BitSumGenerator.h  CheckSumGenerator.h  PngParser.h
src/: BitSumGenerator.cpp  CheckSumGenerator.cpp  PngParser.cpp  main.cpp
tests/: CMakeLists.txt  unit_tests.cpp
